tests/cases/generics/errors/type-alias-arity.ari
type Boxed[T] = T;

fn main() -> i64 {
  let value: Boxed = 1;
  return value;
}
